// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatInput /> (native) should disable input when isDisabled is true 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="chat-input"
    position="relative"
    style={
      [
        {
          "position": "relative",
        },
      ]
    }
  >
    <View
      data-blade-component="base-box"
      onLayout={[Function]}
      position="relative"
      style={
        [
          {
            "position": "relative",
            "zIndex": 1,
          },
        ]
      }
      zIndex={1}
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="column"
          position="relative"
          style={
            [
              {
                "display": "flex",
                "flexDirection": "column",
                "position": "relative",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <View
            className="focus-ring-wrapper"
            currentInteraction="default"
            data-blade-component="base-box"
            elevation="highRaised"
            isTableInputCell={false}
            shouldAddLimitedFocus={false}
            style={
              [
                {},
                {
                  "elevation": 24,
                  "shadowColor": "hsla(200, 10%, 18%, 1)",
                  "shadowOffset": {
                    "height": 8,
                    "width": 0,
                  },
                  "shadowOpacity": 0.06,
                  "shadowRadius": 12,
                },
                [
                  {
                    "borderRadius": 16,
                    "width": "100%",
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "position": "relative",
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "borderColor": "hsla(218, 89%, 51%, 0.18)",
                      "position": "absolute",
                    },
                    {
                      "borderRadius": 16,
                      "borderWidth": 0,
                      "bottom": -0,
                      "left": -0,
                      "right": -0,
                      "top": -0,
                    },
                  ]
                }
              />
              <View
                borderRadius="large"
                currentInteraction="default"
                isDisabled={true}
                isTableInputCell={false}
                numberOfLines={2}
                onClick={[Function]}
                setShowAllTagsWithAnimation={[Function]}
                size="medium"
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "hsla(0, 0%, 97%, 1)",
                      "borderColor": "hsla(204, 8%, 88%, 1)",
                      "borderRadius": 16,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "display": "flex",
                      "flexDirection": "row",
                      "overflow": "hidden",
                      "position": "relative",
                      "width": "100%",
                    },
                    {},
                    {
                      "backgroundColor": "hsla(0, 0%, 97%, 1)",
                      "borderColor": "hsla(204, 8%, 88%, 1)",
                      "borderRadius": 16,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                    },
                  ]
                }
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                        "width": "100%",
                      },
                    ]
                  }
                  width="100%"
                >
                  <View
                    alignItems="flex-start"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flexDirection": "row",
                          "width": "100%",
                        },
                      ]
                    }
                    width="100%"
                  >
                    <TextInput
                      accessibilityDescribedBy=""
                      accessibilityInvalid={false}
                      accessibilityLabel="Chat input"
                      accessibilityRequired={false}
                      accessibilityState={
                        {
                          "disabled": true,
                          "expanded": undefined,
                        }
                      }
                      accessible={true}
                      autoFocus={false}
                      data-blade-component="styled-base-input"
                      editable={false}
                      hasLeadingDropdown={false}
                      hasTags={false}
                      id="chatinput-148-149-input-150"
                      includeFontPadding={false}
                      isFocused={false}
                      isInsideCounterInput={false}
                      isTableInputCell={false}
                      isTextArea={true}
                      keyboardType="default"
                      multiline={true}
                      numberOfLines={2}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onContentSizeChange={[Function]}
                      onEndEditing={[Function]}
                      onFocus={[Function]}
                      onKeyPress={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="Ask a question..."
                      placeholderTextColor="hsla(206, 10%, 29%, 0.32)"
                      scrollEnabled={false}
                      secureTextEntry={false}
                      style={
                        [
                          {
                            "backgroundColor": "hsla(0, 0%, 100%, 0)",
                            "color": "hsla(206, 10%, 29%, 0.32)",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "Inter",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": -0.18200000000000002,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "minHeight": 72,
                            "paddingBottom": 16,
                            "paddingLeft": 16,
                            "paddingRight": 16,
                            "paddingTop": 16,
                            "textAlignVertical": "top",
                            "textDecorationLine": "none",
                            "width": "100%",
                          },
                          {
                            "height": 72,
                            "maxHeight": 200,
                          },
                        ]
                      }
                      value=""
                      valueComponentType="text"
                    />
                  </View>
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    justifyContent="space-between"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "paddingBottom": 16,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "paddingTop": 16,
                        },
                      ]
                    }
                  >
                    <View
                      alignItems="center"
                      data-blade-component="base-box"
                      display="flex"
                      style={
                        [
                          {
                            "alignItems": "center",
                            "display": "flex",
                          },
                        ]
                      }
                    >
                      <View
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": true,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "alignSelf": "flex-start",
                              "backgroundColor": "transparent",
                              "borderColor": "black",
                              "borderStyle": "solid",
                              "borderWidth": 0,
                              "outline": "none",
                              "paddingBottom": 0,
                              "paddingLeft": 0,
                              "paddingRight": 0,
                              "paddingTop": 0,
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                            },
                          ]
                        }
                      >
                        <View
                          alignItems="center"
                          className="content-container"
                          data-blade-component="base-box"
                          display="flex"
                          flexDirection="row"
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexDirection": "row",
                              },
                            ]
                          }
                        >
                          <View
                            alignItems="center"
                            data-blade-component="base-box"
                            display="flex"
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "paddingRight": 4,
                                },
                              ]
                            }
                          >
                            <RNSVGSvgView
                              accessibilityElementsHidden={true}
                              align="xMidYMid"
                              bbHeight="12px"
                              bbWidth="12px"
                              data-blade-component="icon"
                              fill="none"
                              focusable={false}
                              height="12px"
                              importantForAccessibility="no-hide-descendants"
                              meetOrSlice={0}
                              minX={0}
                              minY={0}
                              style={
                                [
                                  {
                                    "backgroundColor": "transparent",
                                    "borderWidth": 0,
                                  },
                                  [
                                    {},
                                  ],
                                  {
                                    "flex": 0,
                                    "height": 12,
                                    "width": 12,
                                  },
                                ]
                              }
                              vbHeight={24}
                              vbWidth={24}
                              width="12px"
                            >
                              <RNSVGGroup
                                fill={null}
                                propList={
                                  [
                                    "fill",
                                  ]
                                }
                              >
                                <RNSVGPath
                                  d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                                  fill={
                                    {
                                      "payload": 1380141905,
                                      "type": 0,
                                    }
                                  }
                                  propList={
                                    [
                                      "fill",
                                    ]
                                  }
                                />
                              </RNSVGGroup>
                            </RNSVGSvgView>
                          </View>
                          <Text
                            accessible={true}
                            color="interactive.text.neutral.disabled"
                            data-blade-component="base-text"
                            fontSize={75}
                            fontWeight="medium"
                            lineHeight={75}
                            style={
                              [
                                {
                                  "color": "hsla(206, 10%, 29%, 0.32)",
                                  "fontFamily": "Inter",
                                  "fontSize": 12,
                                  "fontStyle": "normal",
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 17,
                                  "marginBottom": 0,
                                  "marginLeft": 0,
                                  "marginRight": 0,
                                  "marginTop": 0,
                                  "paddingBottom": 0,
                                  "paddingLeft": 0,
                                  "paddingRight": 0,
                                  "paddingTop": 0,
                                  "textAlign": "center",
                                  "textDecorationLine": "none",
                                },
                              ]
                            }
                            textAlign="center"
                            textDecorationLine="none"
                          >
                            Upload file
                          </Text>
                        </View>
                      </View>
                    </View>
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {},
                        ]
                      }
                    >
                      <View
                        accessibilityLabel="Submit"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": true,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        borderRadius={8}
                        buttonPaddingBottom="0px"
                        buttonPaddingLeft="0px"
                        buttonPaddingRight="0px"
                        buttonPaddingTop="0px"
                        collapsable={false}
                        color="primary"
                        data-blade-component="button"
                        defaultBackgroundColor="hsla(218, 89%, 51%, 0.18)"
                        focusBackgroundColor="hsla(218, 89%, 51%, 0.18)"
                        focusRingColor="hsla(218, 89%, 51%, 0.18)"
                        focusable={true}
                        height="32px"
                        hoverBackgroundColor="hsla(218, 89%, 51%, 0.18)"
                        hoverIconColor="hsla(218, 89%, 51%, 0.32)"
                        isFullWidth={false}
                        isLoading={false}
                        isPressed={false}
                        minHeight="32px"
                        motionDuration="duration.xquick"
                        motionEasing="easing.standard"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseDown={[Function]}
                        onMouseUp={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        size="small"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "alignSelf": "center",
                              "backgroundColor": "hsla(218, 89%, 51%, 0.18)",
                              "borderColor": "black",
                              "borderRadius": 8,
                              "borderStyle": "solid",
                              "borderWidth": 0,
                              "cursor": "not-allowed",
                              "display": "flex",
                              "flexDirection": "row",
                              "height": 32,
                              "justifyContent": "center",
                              "minHeight": 32,
                              "overflow": "hidden",
                              "paddingBottom": 0,
                              "paddingLeft": 0,
                              "paddingRight": 0,
                              "paddingTop": 0,
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "width": 32,
                            },
                            {
                              "backgroundColor": "hsla(218, 89%, 51%, 0.18)",
                            },
                          ]
                        }
                        type="button"
                        width="32px"
                      >
                        <View
                          style={
                            {
                              "transform": [
                                {
                                  "scale": 1,
                                },
                              ],
                            }
                          }
                        >
                          <View
                            alignItems="center"
                            data-blade-component="base-box"
                            display="flex"
                            flexDirection="row"
                            isHidden={false}
                            justifyContent="center"
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "flexBasis": 0,
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                  "justifyContent": "center",
                                  "zIndex": 1,
                                },
                                {
                                  "opacity": 1,
                                },
                              ]
                            }
                            zIndex={1}
                          >
                            <View
                              alignItems="center"
                              data-blade-component="base-box"
                              display="flex"
                              justifyContent="center"
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "display": "flex",
                                    "justifyContent": "center",
                                  },
                                ]
                              }
                            >
                              <RNSVGSvgView
                                accessibilityElementsHidden={true}
                                align="xMidYMid"
                                bbHeight="16px"
                                bbWidth="16px"
                                data-blade-component="icon"
                                fill="none"
                                focusable={false}
                                height="16px"
                                importantForAccessibility="no-hide-descendants"
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  [
                                    {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    [
                                      {},
                                    ],
                                    {
                                      "flex": 0,
                                      "height": 16,
                                      "width": 16,
                                    },
                                  ]
                                }
                                vbHeight={24}
                                vbWidth={24}
                                width="16px"
                              >
                                <RNSVGGroup
                                  fill={null}
                                  propList={
                                    [
                                      "fill",
                                    ]
                                  }
                                >
                                  <RNSVGPath
                                    d="M12.7071 3.29289C12.3166 2.90237 11.6834 2.90237 11.2929 3.29289L5.29289 9.29289C4.90237 9.68342 4.90237 10.3166 5.29289 10.7071C5.68342 11.0976 6.31658 11.0976 6.70711 10.7071L11 6.41421V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V6.41421L17.2929 10.7071C17.6834 11.0976 18.3166 11.0976 18.7071 10.7071C19.0976 10.3166 19.0976 9.68342 18.7071 9.29289L12.7071 3.29289Z"
                                    fill={
                                      {
                                        "payload": 1377002737,
                                        "type": 0,
                                      }
                                    }
                                    propList={
                                      [
                                        "fill",
                                      ]
                                    }
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ChatInput /> (native) should render with default props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="chat-input"
    position="relative"
    style={
      [
        {
          "position": "relative",
        },
      ]
    }
  >
    <View
      data-blade-component="base-box"
      onLayout={[Function]}
      position="relative"
      style={
        [
          {
            "position": "relative",
            "zIndex": 1,
          },
        ]
      }
      zIndex={1}
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="column"
          position="relative"
          style={
            [
              {
                "display": "flex",
                "flexDirection": "column",
                "position": "relative",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <View
            className="focus-ring-wrapper"
            currentInteraction="default"
            data-blade-component="base-box"
            elevation="highRaised"
            isTableInputCell={false}
            shouldAddLimitedFocus={false}
            style={
              [
                {},
                {
                  "elevation": 24,
                  "shadowColor": "hsla(200, 10%, 18%, 1)",
                  "shadowOffset": {
                    "height": 8,
                    "width": 0,
                  },
                  "shadowOpacity": 0.06,
                  "shadowRadius": 12,
                },
                [
                  {
                    "borderRadius": 16,
                    "width": "100%",
                  },
                ],
              ]
            }
          >
            <View
              style={
                {
                  "position": "relative",
                  "width": "100%",
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "borderColor": "hsla(218, 89%, 51%, 0.18)",
                      "position": "absolute",
                    },
                    {
                      "borderRadius": 16,
                      "borderWidth": 0,
                      "bottom": -0,
                      "left": -0,
                      "right": -0,
                      "top": -0,
                    },
                  ]
                }
              />
              <View
                borderRadius="large"
                currentInteraction="default"
                isDisabled={false}
                isTableInputCell={false}
                numberOfLines={2}
                onClick={[Function]}
                setShowAllTagsWithAnimation={[Function]}
                size="medium"
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "hsla(0, 0%, 100%, 1)",
                      "borderColor": "hsla(204, 8%, 88%, 1)",
                      "borderRadius": 16,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "display": "flex",
                      "flexDirection": "row",
                      "overflow": "hidden",
                      "position": "relative",
                      "width": "100%",
                    },
                    {},
                    {
                      "backgroundColor": "hsla(0, 0%, 100%, 1)",
                      "borderColor": "hsla(204, 8%, 88%, 1)",
                      "borderRadius": 16,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                    },
                  ]
                }
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                        "width": "100%",
                      },
                    ]
                  }
                  width="100%"
                >
                  <View
                    alignItems="flex-start"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flexDirection": "row",
                          "width": "100%",
                        },
                      ]
                    }
                    width="100%"
                  >
                    <TextInput
                      accessibilityDescribedBy=""
                      accessibilityInvalid={false}
                      accessibilityLabel="Chat input"
                      accessibilityRequired={false}
                      accessibilityState={
                        {
                          "disabled": false,
                          "expanded": undefined,
                        }
                      }
                      accessible={true}
                      autoFocus={false}
                      data-blade-component="styled-base-input"
                      editable={true}
                      hasLeadingDropdown={false}
                      hasTags={false}
                      id="chatinput-7-1-input-2"
                      includeFontPadding={false}
                      isFocused={false}
                      isInsideCounterInput={false}
                      isTableInputCell={false}
                      isTextArea={true}
                      keyboardType="default"
                      multiline={true}
                      numberOfLines={2}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onContentSizeChange={[Function]}
                      onEndEditing={[Function]}
                      onFocus={[Function]}
                      onKeyPress={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="Ask a question..."
                      placeholderTextColor="hsla(206, 10%, 29%, 0.32)"
                      scrollEnabled={false}
                      secureTextEntry={false}
                      style={
                        [
                          {
                            "backgroundColor": "hsla(0, 0%, 100%, 0)",
                            "color": "hsla(0, 0%, 2%, 1)",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "fontFamily": "Inter",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": -0.18200000000000002,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "minHeight": 72,
                            "paddingBottom": 16,
                            "paddingLeft": 16,
                            "paddingRight": 16,
                            "paddingTop": 16,
                            "textAlignVertical": "top",
                            "textDecorationLine": "none",
                            "width": "100%",
                          },
                          {
                            "height": 72,
                            "maxHeight": 200,
                          },
                        ]
                      }
                      value=""
                      valueComponentType="text"
                    />
                  </View>
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    justifyContent="space-between"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "paddingBottom": 16,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "paddingTop": 16,
                        },
                      ]
                    }
                  >
                    <View
                      alignItems="center"
                      data-blade-component="base-box"
                      display="flex"
                      style={
                        [
                          {
                            "alignItems": "center",
                            "display": "flex",
                          },
                        ]
                      }
                    >
                      <View
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "alignSelf": "flex-start",
                              "backgroundColor": "transparent",
                              "borderColor": "black",
                              "borderStyle": "solid",
                              "borderWidth": 0,
                              "outline": "none",
                              "paddingBottom": 0,
                              "paddingLeft": 0,
                              "paddingRight": 0,
                              "paddingTop": 0,
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                            },
                          ]
                        }
                      >
                        <View
                          alignItems="center"
                          className="content-container"
                          data-blade-component="base-box"
                          display="flex"
                          flexDirection="row"
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexDirection": "row",
                              },
                            ]
                          }
                        >
                          <View
                            alignItems="center"
                            data-blade-component="base-box"
                            display="flex"
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "paddingRight": 4,
                                },
                              ]
                            }
                          >
                            <RNSVGSvgView
                              accessibilityElementsHidden={true}
                              align="xMidYMid"
                              bbHeight="12px"
                              bbWidth="12px"
                              data-blade-component="icon"
                              fill="none"
                              focusable={false}
                              height="12px"
                              importantForAccessibility="no-hide-descendants"
                              meetOrSlice={0}
                              minX={0}
                              minY={0}
                              style={
                                [
                                  {
                                    "backgroundColor": "transparent",
                                    "borderWidth": 0,
                                  },
                                  [
                                    {},
                                  ],
                                  {
                                    "flex": 0,
                                    "height": 12,
                                    "width": 12,
                                  },
                                ]
                              }
                              vbHeight={24}
                              vbWidth={24}
                              width="12px"
                            >
                              <RNSVGGroup
                                fill={null}
                                propList={
                                  [
                                    "fill",
                                  ]
                                }
                              >
                                <RNSVGPath
                                  d="M13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5V11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H11V19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19V13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11H13V5Z"
                                  fill={
                                    {
                                      "payload": 4278519045,
                                      "type": 0,
                                    }
                                  }
                                  propList={
                                    [
                                      "fill",
                                    ]
                                  }
                                />
                              </RNSVGGroup>
                            </RNSVGSvgView>
                          </View>
                          <Text
                            accessible={true}
                            color="interactive.text.neutral.normal"
                            data-blade-component="base-text"
                            fontSize={75}
                            fontWeight="medium"
                            lineHeight={75}
                            style={
                              [
                                {
                                  "color": "hsla(0, 0%, 2%, 1)",
                                  "fontFamily": "Inter",
                                  "fontSize": 12,
                                  "fontStyle": "normal",
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 17,
                                  "marginBottom": 0,
                                  "marginLeft": 0,
                                  "marginRight": 0,
                                  "marginTop": 0,
                                  "paddingBottom": 0,
                                  "paddingLeft": 0,
                                  "paddingRight": 0,
                                  "paddingTop": 0,
                                  "textAlign": "center",
                                  "textDecorationLine": "none",
                                },
                              ]
                            }
                            textAlign="center"
                            textDecorationLine="none"
                          >
                            Upload file
                          </Text>
                        </View>
                      </View>
                    </View>
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {},
                        ]
                      }
                    >
                      <View
                        accessibilityLabel="Submit"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": true,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        borderRadius={8}
                        buttonPaddingBottom="0px"
                        buttonPaddingLeft="0px"
                        buttonPaddingRight="0px"
                        buttonPaddingTop="0px"
                        collapsable={false}
                        color="primary"
                        data-blade-component="button"
                        defaultBackgroundColor="hsla(218, 89%, 51%, 0.18)"
                        focusBackgroundColor="hsla(218, 89%, 51%, 0.18)"
                        focusRingColor="hsla(218, 89%, 51%, 0.18)"
                        focusable={true}
                        height="32px"
                        hoverBackgroundColor="hsla(218, 89%, 51%, 0.18)"
                        hoverIconColor="hsla(218, 89%, 51%, 0.32)"
                        isFullWidth={false}
                        isLoading={false}
                        isPressed={false}
                        minHeight="32px"
                        motionDuration="duration.xquick"
                        motionEasing="easing.standard"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseDown={[Function]}
                        onMouseUp={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        size="small"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "alignSelf": "center",
                              "backgroundColor": "hsla(218, 89%, 51%, 0.18)",
                              "borderColor": "black",
                              "borderRadius": 8,
                              "borderStyle": "solid",
                              "borderWidth": 0,
                              "cursor": "not-allowed",
                              "display": "flex",
                              "flexDirection": "row",
                              "height": 32,
                              "justifyContent": "center",
                              "minHeight": 32,
                              "overflow": "hidden",
                              "paddingBottom": 0,
                              "paddingLeft": 0,
                              "paddingRight": 0,
                              "paddingTop": 0,
                              "textDecorationColor": "black",
                              "textDecorationLine": "none",
                              "textDecorationStyle": "solid",
                              "width": 32,
                            },
                            {
                              "backgroundColor": "hsla(218, 89%, 51%, 0.18)",
                            },
                          ]
                        }
                        type="button"
                        width="32px"
                      >
                        <View
                          style={
                            {
                              "transform": [
                                {
                                  "scale": 1,
                                },
                              ],
                            }
                          }
                        >
                          <View
                            alignItems="center"
                            data-blade-component="base-box"
                            display="flex"
                            flexDirection="row"
                            isHidden={false}
                            justifyContent="center"
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "flexBasis": 0,
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                  "justifyContent": "center",
                                  "zIndex": 1,
                                },
                                {
                                  "opacity": 1,
                                },
                              ]
                            }
                            zIndex={1}
                          >
                            <View
                              alignItems="center"
                              data-blade-component="base-box"
                              display="flex"
                              justifyContent="center"
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "display": "flex",
                                    "justifyContent": "center",
                                  },
                                ]
                              }
                            >
                              <RNSVGSvgView
                                accessibilityElementsHidden={true}
                                align="xMidYMid"
                                bbHeight="16px"
                                bbWidth="16px"
                                data-blade-component="icon"
                                fill="none"
                                focusable={false}
                                height="16px"
                                importantForAccessibility="no-hide-descendants"
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  [
                                    {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    [
                                      {},
                                    ],
                                    {
                                      "flex": 0,
                                      "height": 16,
                                      "width": 16,
                                    },
                                  ]
                                }
                                vbHeight={24}
                                vbWidth={24}
                                width="16px"
                              >
                                <RNSVGGroup
                                  fill={null}
                                  propList={
                                    [
                                      "fill",
                                    ]
                                  }
                                >
                                  <RNSVGPath
                                    d="M12.7071 3.29289C12.3166 2.90237 11.6834 2.90237 11.2929 3.29289L5.29289 9.29289C4.90237 9.68342 4.90237 10.3166 5.29289 10.7071C5.68342 11.0976 6.31658 11.0976 6.70711 10.7071L11 6.41421V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V6.41421L17.2929 10.7071C17.6834 11.0976 18.3166 11.0976 18.7071 10.7071C19.0976 10.3166 19.0976 9.68342 18.7071 9.29289L12.7071 3.29289Z"
                                    fill={
                                      {
                                        "payload": 1377002737,
                                        "type": 0,
                                      }
                                    }
                                    propList={
                                      [
                                        "fill",
                                      ]
                                    }
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
